--- a/src/index.css
+++ b/src/index.css
@@ -132,7 +132,7 @@ body {
         opacity: 0.7;
     }
 
-.title, h1, h2{
+.title, h1, h2, small{
   font-family: "VT323", monospace;
   color: #6b6b6b;
 
