--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,27 @@
-.flexBox{
-  display: flex; 
-  flex-wrap: wrap; 
-  max-width: 800px
-}
 
-.flexItem{
-  text-align: left; 
+.detailBox{
+  margin: 0 auto ;
+  margin-top: 40px;
+  text-align: left;
   max-width: 300px;
 }
 
-.detailBox{
-  text-align: left; 
-  
-  max-width: 300px; 
-  margin-top: 40px
+.carouselBox{
+  margin: 0 auto ;
+  text-align: left;
+  max-width: 300px;
 }
 
+.center {text-align: center;}
+
+.mainWindow{
+  padding-top: 40px;
+  max-width: 800px; 
+  margin: 0 auto;
+  text-align: center;
+}
+
+.row {text-align: left;}
 
 body {
     background-color: #EBEBEB;
@@ -23,7 +29,7 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     color: #6b6b6b;
-    text-align: center;
+    
     font-size: 1.1rem;
     font-family: sans-serif;
   }
@@ -71,66 +77,67 @@ body {
       margin-top: 10px;
       margin-right: 0px;
     }
-    .btn:hover{
-        -webkit-transition: all 200ms ease-in;
-        -webkit-transform: scale(1.5);
-        -ms-transition: all 200ms ease-in;
-        -ms-transform: scale(1.5);   
-        -moz-transition: all 200ms ease-in;
-        -moz-transform: scale(1.5);
-        transition: all 200ms ease-in;
-        transform: scale(1.03);
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.05);
-        transition: box-shadow 0.2s ease-in-out;
-    }
-    div{
-      margin: 0 auto;
-    }
+.btn:hover{
+      -webkit-transition: all 200ms ease-in;
+      -webkit-transform: scale(1.5);
+      -ms-transition: all 200ms ease-in;
+      -ms-transform: scale(1.5);   
+      -moz-transition: all 200ms ease-in;
+      -moz-transform: scale(1.5);
+      transition: all 200ms ease-in;
+      transform: scale(1.03);
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.05);
+      transition: box-shadow 0.2s ease-in-out;
+  }
+  div{
+    margin: 0 auto;
+  }
 
-    .marginBottom{
-      margin-bottom: 50px;
-    }
+.marginBottom{
+    margin-bottom: 50px;
+  }
 
-    .img-fluid{
-      max-width: 320px !important;
-      max-height: 320px !important;
-    }
-    hr{
-      max-width: 100px; 
-      margin: 0 auto; 
-      margin-bottom: 30px
-    }
+  .img-fluid{
+    max-width: 320px !important;
+    max-height: 320px !important;
+}
+
+hr{
+    max-width: 100px; 
+    margin: 0 auto; 
+    margin-bottom: 30px
+  }
 
 .copy{
       margin-left: 10px;
+      text-align: left;
     }
 
-    #myCarousel .list-inline {
+#myCarousel .list-inline {
+
+}
+
+#myCarousel .carousel-indicators {
+    position: static;
+    left: initial;
+    width: initial;
+    margin-left: initial;
     
-    
-    }
+}
 
-    #myCarousel .carousel-indicators {
-        position: static;
-        left: initial;
-        width: initial;
-        margin-left: initial;
-        
-    }
+#myCarousel .carousel-indicators > li {
+    width: initial;
+    height: initial;
+    text-indent: initial;                
+}
 
-    #myCarousel .carousel-indicators > li {
-        width: initial;
-        height: initial;
-        text-indent: initial;                
-    }
+ #myCarousel .carousel-indicators > li img {
+    max-width: 50px !important;
+}
 
-     #myCarousel .carousel-indicators > li img {
-        max-width: 50px !important;
-    }
-
-    #myCarousel .carousel-indicators > li.active img {
-        opacity: 0.7;
-    }
+#myCarousel .carousel-indicators > li.active img {
+    opacity: 0.7;
+}
 
 .title, h1, h2, small{
   font-family: "VT323", monospace;
@@ -142,26 +149,28 @@ body {
 
 
 nav {
-  max-width: 600px;
+  text-align: center !important;
+  max-width: 400px;
   margin: 0 auto;
 }
 
 nav ul {
+      padding-left: 0px !important;
       list-style: none;
       display: flex;
-      justify-content: space-around;
       margin-bottom: 20px;
+      justify-content: center
       
     }
 
-    nav ul li {
+nav ul li {
       padding: 10px;
     }
 
-    nav ul li a {
-      color: #6b6b6b;
-      text-decoration: none !important;
-    }
+nav ul li a {
+  color: #6b6b6b;
+  text-decoration: none !important;
+}
 
 .current {
       border-bottom: 4px solid #6b6b6b;
