--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 
 
 .detailBox{
+  font-family: "VT323", monospace;
+  font-size: 1.5rem;
   margin: 0 auto ;
   margin-top: 40px;
   text-align: left;
@@ -33,7 +35,6 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     color: #6b6b6b;
-    
     font-size: 1.1rem;
     font-family: sans-serif;
   }
@@ -62,9 +63,9 @@ body {
   .btn {
       background-image: url("flamingos.gif");
       background-size: 300px 300px;
-      color:black;
+      color:#0B0B3B;
+      text-shadow: 1px 1px 5px white;
       /*border: 3px solid black ;*/
-
       padding: 10px;
       border-radius: 10px;
       text-decoration: none;
@@ -74,10 +75,11 @@ body {
       /*border: 0;
       color: white;
       background-color: #3093FB;*/
-      font-size: 1rem;
-      padding-left: 80px;
-      padding-right: 80px;
-      font-weight: 900;
+      font-family: sans-serif ;
+      font-size: 1.2rem;
+      padding-left: 50px;
+      padding-right: 50px;
+      font-weight: 700;
       margin-top: 10px;
       margin-right: 0px;
     }
